# Adaptive_RAG

./: .env.example  .gitignore  API.md  ISSUES_SUMMARY.md  LICENSE  README copy.md  README.md  ingest.py  main.py  pyproject.toml
Scripts/: main_stage1.py  main_stage2.py  main_stage4.py  main_stage5.py
docs/: AdaptiveRAG_Project_Plan.md  FastAPI_Integration_Plan.md  advice.md
src/: client.py  config.py  graph.py  prompts.py  state.py  tools.py
src/api/: __main__.py  app.py  schemas.py
src/api/middleware/: error_handler.py  request_logging.py
src/api/routes/: documents.py  health.py  ingest.py  query.py
src/api/schemas/: errors.py
src/api/services/: document.py  ingest.py  query.py  readiness.py
src/evaluation/: dataset.py  evaluators.py  run_eval.py
src/ingestion/: embedder.py  loader.py  vectorstore.py
src/nodes/: critic.py  direct_answer.py  generator.py  grader.py  reranker.py  retriever.py  rewriter.py  router.py  web_search.py
src/retrieval/: hybrid.py  keyword.py  reranker.py  semantic.py
src/utils/: documents.py  logging.py  logging_config.py
tests/api/: test_documents.py  test_health.py  test_ingest.py  test_logging.py  test_query.py
