[project]
name = "adaptive-rag"
version = "0.1.0"
requires-python = ">=3.11"

dependencies = [
    "langchain",
    "langchain-huggingface",
    "langchain-chroma",
    "langchain-tavily",
    "langchain-community",
    "langgraph",
    "langsmith",
    "chromadb",
    "rank-bm25",
    "pypdf",
    "sentence-transformers",
    "pydantic-settings",
    "python-dotenv",
    "langchain-google-genai",
    "fastapi",
    "uvicorn[standard]",
    "python-multipart",
    "pytest",
    "httpx",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]